Homework nine v2 * Поправил замечания